[package]
name = "libsecp256k1"
description = "Pure Rust secp256k1 implementation."
license = "Apache-2.0"
version = "0.3.1"
authors = ["Wei Tang <hi@that.world>"]
repository = "https://github.com/sorpaas/libsecp256k1-rs"
keywords = [ "crypto", "ECDSA", "secp256k1", "bitcoin", "no_std" ]
edition = "2018"

[lib]
name = "secp256k1"

[dependencies]
rand = { git = "https://github.com/mesalock-linux/rand-sgx", tag = "v0.6.5_sgx1.0.9" }
hmac-drbg = { git = "https://github.com/mesalock-linux/hmac-drbg-rs-sgx" }
sha2 = { git = "https://github.com/mesalock-linux/rustcrypto-hashes-sgx" }
digest = { git = "https://github.com/mesalock-linux/rustcrypto-traits-sgx" }
typenum = "1.11"
arrayref = "0.3"
subtle = { git = "https://github.com/mesalock-linux/subtle-sgx" }
sgx_tstd = { rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git", optional = true }

[dev-dependencies]
#secp256k1-test = "0.7"
#clear_on_drop = "0.2"
#rand-test = { package = "rand", version = "0.4" }

[features]
default = ["std", "mesalock_sgx"]
std = ["subtle/std", "rand/std", "mesalock_sgx"]
mesalock_sgx = ["std", "sgx_tstd"]

[workspace]
members = [
  "./gen/ecmult",
  "./gen/genmult",
]
